efk-stack-minikube/elasticsearch-client.yaml
---
# Source: elasticsearch/templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  namespace: observability
  name: elasticsearch-client
  labels:
    heritage: "Helm"
    release: "elasticsearch-client"
    chart: "elasticsearch"
    app: "elasticsearch-client"
  annotations:
    {}
spec:
  type: LoadBalancer
  selector:
    release: "elasticsearch-client"
    chart: "elasticsearch"
    app: "elasticsearch-client"
  ports:
  - name: http
    protocol: TCP
    port: 9200
  - name: transport
    protocol: TCP
    port: 9300
---
# Source: elasticsearch/templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  namespace: observability
  name: elasticsearch-client-headless
  labels:
    heritage: "Helm"
    release: "elasticsearch-client"
    chart: "elasticsearch"
    app: "elasticsearch-client"
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
spec:
  clusterIP: None # This is needed for statefulset hostnames like elasticsearch-0 to resolve
  # Create endpoints also if the related pod isn't ready
  publishNotReadyAddresses: true
  selector:
    app: "elasticsearch-client"
  ports:
  - name: http
    port: 9200
  - name: transport
    port: 9300
---
# Source: elasticsearch/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: observability
  name: elasticsearch-client
  labels:
    heritage: "Helm"
    release: "elasticsearch-client"
    chart: "elasticsearch"
    app: "elasticsearch-client"
  annotations:
    esMajorVersion: "7"
spec:
  serviceName: elasticsearch-client-headless
  selector:
    matchLabels:
      app: "elasticsearch-client"
  replicas: 1
  podManagementPolicy: Parallel
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      name: "elasticsearch-client"
      labels:
        heritage: "Helm"
        release: "elasticsearch-client"
        chart: "elasticsearch"
        app: "elasticsearch-client"
      annotations:
        
    spec:
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            podAffinityTerm:
              topologyKey: kubernetes.io/hostname
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - "elasticsearch-client"
      terminationGracePeriodSeconds: 120
      volumes:
      enableServiceLinks: true
      containers:
      - name: "elasticsearch"
        securityContext:
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          runAsUser: 1000
        image: "elasticsearch:7.8.0"
        imagePullPolicy: "IfNotPresent"
        readinessProbe:
          exec:
            command:
              - sh
              - -c
              - |
                [...]
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 3
          timeoutSeconds: 5
        ports:
        - name: http
          containerPort: 9200
        - name: transport
          containerPort: 9300
        resources:
          limits:
            cpu: 500m
            memory: 256M
          requests:
            cpu: 50m
            memory: 256M
        volumeMounts:
