efk-stack-minikube/elasticsearch-data.yaml
# Source: elasticsearch/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: observability
  name: elasticsearch-data
  labels:
    heritage: "Helm"
    release: "elasticsearch-data"
    chart: "elasticsearch"
    app: "elasticsearch-data"
  annotations:
    {}
spec:
  type: ClusterIP
  selector:
    release: "elasticsearch-data"
    chart: "elasticsearch"
    app: "elasticsearch-data"
  ports:
  - name: http
    protocol: TCP
    port: 9200
  - name: transport
    protocol: TCP
    port: 9300
---
# Source: elasticsearch/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: observability
  name: elasticsearch-data-headless
  labels:
    heritage: "Helm"
    release: "elasticsearch-data"
    chart: "elasticsearch"
    app: "elasticsearch-data"
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
spec:
  clusterIP: None # This is needed for statefulset hostnames like elasticsearch-0 to resolve
  # Create endpoints also if the related pod isn't ready
  publishNotReadyAddresses: true
  selector:
    app: "elasticsearch-data"
  ports:
  - name: http
    port: 9200
  - name: transport
    port: 9300
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: observability
  name: elasticsearch-data
  labels:
    heritage: "Helm"
    release: "elasticsearch-data"
    chart: "elasticsearch"
    app: "elasticsearch-data"
  annotations:
    esMajorVersion: "7"
spec:
  serviceName: elasticsearch-data-headless
  selector:
    matchLabels:
      app: "elasticsearch-data"
  replicas: 3
  podManagementPolicy: Parallel
  updateStrategy:
    type: RollingUpdate
  volumeClaimTemplates:
  - metadata:
      name: elasticsearch-data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 5000M
      storageClassName: standard
  template:
    metadata:
      name: "elasticsearch-data"
      labels:
        heritage: "Helm"
        release: "elasticsearch-data"
        chart: "elasticsearch"
        app: "elasticsearch-data"
      annotations:
        
    spec:
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            podAffinityTerm:
              topologyKey: kubernetes.io/hostname
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - "elasticsearch-data"
      terminationGracePeriodSeconds: 120
      volumes:
      enableServiceLinks: true
      containers:
      - name: "elasticsearch"
        securityContext:
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          runAsUser: 1000
        image: "elasticsearch:7.8.0"
        imagePullPolicy: "IfNotPresent"
        readinessProbe:
          exec:
            command:
              - sh
              - -c
              - |
                [...]
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 3
          timeoutSeconds: 5
        ports:
        - name: http
          containerPort: 9200
        - name: transport
          containerPort: 9300
        resources:
          limits:
            cpu: 500m
            memory: 256M
          requests:
            cpu: 50m
            memory: 256M
        volumeMounts:
          - name: "elasticsearch-data"
            mountPath: /usr/share/elasticsearch/data
